--- a/Client/package.json
+++ b/Client/package.json
@@ -18,18 +18,19 @@
     "@angular/core": "^17.1.2",
     "@angular/forms": "^17.1.2",
     "@angular/material": "^17.1.2",
+    "@angular/material-luxon-adapter": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
-    "@auth0/angular-jwt": "^5.1.2",
-    "autoprefixer": "^10.4.14",
-    "globby": "^13.1.4",
-    "moment": "^2.29.4",
-    "postcss": "^8.4.23",
-    "postcss-import": "^15.1.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "autoprefixer": "^10.4.17",
+    "globby": "^14.0.0",
+    "moment": "^2.30.1",
+    "postcss": "^8.4.33",
+    "postcss-import": "^16.0.0",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^3.3.2",
-    "tslib": "^2.3.0",
+    "tailwindcss": "^3.4.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -37,13 +38,14 @@
     "@angular-devkit/build-angular": "^17.1.2",
     "@angular/cli": "~17.1.2",
     "@angular/compiler-cli": "^17.1.2",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/luxon": "^3.4.2",
+    "jasmine-core": "^5.1.1",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "typescript": "~5.3.3"
   }
 }
