[feat]: posibilité dajouter quand la personne a reçus la pretrise d'aaron

--- a/Client/angular.json
+++ b/Client/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/izitoast/dist/css/iziToast.min.css",
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
