--- a/Client/package.json
+++ b/Client/package.json
@@ -28,6 +28,7 @@
     "globby": "^14.0.0",
     "izitoast": "^1.4.0",
     "moment": "^2.30.1",
+    "ngx-material-timepicker": "^13.1.1",
     "postcss": "^8.4.33",
     "postcss-import": "^16.0.0",
     "rxjs": "~7.8.0",
